# LASR-probe-gen

./: .gitignore  README.md  debug_activations.py  get_activations.py  pyproject.toml  reformat_inputs.ipynb  uv.lock_old
data/lists/: llama_3b_balanced_1k.jsonl  llama_3b_prompted_balanced_1k.jsonl  qwen_3b_balanced_1k.jsonl
data/metaphors/: llama_3b_balanced_1k.jsonl  llama_3b_prompted_balanced_1k.jsonl  qwen_3b_balanced_1k.jsonl
data/refusal/: anthropic_raw_apr_23.jsonl  llama_3b_balanced_1k.jsonl  llama_3b_prompted_balanced_1k.jsonl  llama_3b_story_balanced_1k.jsonl  ministral_8b_balanced_1k.jsonl  off_policy_balanced_5k.jsonl  off_policy_harmgrader.jsonl  off_policy_raw.jsonl  on_policy_balanced.jsonl  on_policy_balanced_5k.jsonl  on_policy_harmgrader.jsonl  on_policy_raw.jsonl
data/science/: llama_3b_balanced_1k.jsonl  llama_3b_prompted_balanced_1k.jsonl  qwen_3b_balanced_1k.jsonl
data/sycophancy/: llama_3b_balanced_1k.jsonl  llama_3b_prompted_balanced_1k.jsonl  ministral_8b_balanced_1k.jsonl
data/sycophancy_short/: llama_3b_balanced_1k.jsonl  llama_3b_prompted_balanced_1k.jsonl  qwen_3b_balanced_1k.jsonl
gen_data/: utils.py
get_activations/: utils.py
notebooks/: ActivationAnalysis.ipynb  DataPipeline.ipynb  DataUtils.ipynb  GetActivations.ipynb  LabelAnalysis.ipynb  PerplexityAnalysis.ipynb  PerplexityProbePerformance.ipynb  ProcessData.ipynb  TestNathalie.ipynb  TrainProbe.ipynb  TrainProbeTorch.ipynb  TrainProbe_SAM.ipynb  get_activations.ipynb  get_activations_nathalie.ipynb  reformat_inputs.ipynb  test_nathalie.ipynb  upload_to_hf.ipynb
scripts/: get_activations.py  get_dataset_labelled.py  get_labels.py  get_outputs.py  get_outputs_and_labels.py
src/lasr_tutorial/: __init__.py  config.py  training.py
src/probe_gen/: __init__.py  autograder.py  config.py  get_activations.py  paths.py  probe_train.py
src/probe_gen/analysis/: __init__.py  activation_analysis.py  perplexity_analysis.py
src/probe_gen/annotation/: __init__.py  interface_dataset.py  label_dataset.py  refusal_autograder.py  refusal_behaviour.py  sychophancy_behaviour.py  sycophancy_behaviour.py  tinystories_behaviour.py  ultrachat_behaviour.py
src/probe_gen/gen_data/: utils.py
src/probe_gen/probes/: __init__.py  activation_handlers.py  aggregations.py  base.py  ignore_for_now.py  sklearn_probes.py  torch_probes.py  wandb_interface.py
src/probe_gen/standard_experiments/: experiment_plotting.py  grid_experiments.py  hyperparameter_search.py  layer_experiments.py
