[project]
name = "activation-extraction"
version = "0.1.0"
description = "Activation extraction for neural networks"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "datasets>=2.10.0",
    "accelerate>=0.20.0",
    "safetensors>=0.3.0",
    "jupyter>=1.0.0",
    "notebook>=6.0.0",
    "joblib>=1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "get_activations.py",
    "*.py"
]
