[project]
name = "probe_gen"
version = "0.1.0"
description = "Investigation into whether linear probes generalise to on policy behaviours from off policy data"
readme = "README.md"
authors = [
    { name = "Sam Dower", email = "samdower@hotmail.co.uk" }
]
requires-python = ">=3.9"
dependencies = [
    "datasets>=4.0.0",
    "einops>=0.8.1",
    "huggingface-hub>=0.34.3",
    "ipykernel>=6.30.0",
    "ipython>=8.18.1",
    "jaxtyping>=0.2.36",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "openai>=1.99.4",
    "pandas>=2.3.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.55.0",
    "typing-extensions>=4.14.1",
    "wandb>=0.21.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "datasets>=2.10.0",
    "accelerate>=0.20.0",
    "safetensors>=0.3.0",
    "jupyter>=1.0.0",
    "notebook>=6.0.0",
    "joblib>=1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = []

[tool.hatchling.build.targets.wheel]
packages = ["gen_data"]
